# mailbench

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
mailbench/: __init__.py  __main__.py  app.py  app_qt.py  blocklist.py  contacts_manager.py  database.py  icons.py  kerio_client.py  launcher.py  version.py
mailbench/dialogs/: __init__.py  account_dialog.py  blocklist_dialog.py  dialogs.py  dialogs_qt.py  settings_dialog.py
mailbench/models/: __init__.py  contact_model.py
mailbench/views/: __init__.py  compose.py  compose_view.py  contact_detail.py  contacts_panel.py  folder_panel.py  module_switcher.py
mailbench/widgets/: __init__.py
