[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mailbench"
dynamic = ["version"]
description = "A Python email client for Kerio Connect"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jim" }
]
keywords = ["email", "kerio", "mail", "client", "gui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Communications :: Email :: Email Clients (MUA)",
]
dependencies = [
    "requests>=2.28",
    "tkinterweb>=3.0",
]

[project.optional-dependencies]
keyring = ["keyring>=24.0.0"]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
mailbench = "mailbench.__main__:main"

[project.urls]
Homepage = "https://github.com/jpsteil/mailbench"
Repository = "https://github.com/jpsteil/mailbench"
Issues = "https://github.com/jpsteil/mailbench/issues"

[tool.hatch.version]
path = "mailbench/version.py"

[tool.hatch.build.targets.wheel]
packages = ["mailbench"]
include = ["mailbench/resources/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]
